fix spacing on hero part for mobile view

--- a/styles/Home/_hero.scss
+++ b/styles/Home/_hero.scss
@@ -60,6 +60,17 @@
         width: 100%;
         text-align: center;
       }
+      .contact-button {
+        @include touch {
+          margin-top: 1rem;
+          padding: 2rem 4rem;    
+        }
+        span {
+          @include touch {
+            font-size: 2.75rem;
+          }
+        }
+      }
     }
   }
 }
